# Intership-project

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  demo_questions.md  docker-compose.yml  train.md  交通灯目标检测训练方案.md  功能测试报告.md  项目完成度分析报告.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_api_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 8145fdcd9bdd_add_missing_columns_to_model_versions.py  86c3434a7981_init_create_all_tables.py  a3f2b1c8d901_add_checkpoint_fields_to_training_tasks.py  ded4aa9bedf1_add_status_indexes.py
backend/app/api/: auth.py  camera.py  cats.py  chat.py  cloud_adoptions.py  dashboard.py  detection.py  health.py  knowledge.py  recognition.py  training.py
backend/app/config/: settings.py
backend/app/core/: config.py  exceptions.py  logger.py  rate_limit.py  security.py  tz.py
backend/app/database/: migrations.py  seed.py  session.py
backend/app/entity/: db_models.py  schemas.py
backend/app/entity/schemas/: __init__.py  auth.py  cat.py  chat.py  cloud_adoption.py  common.py  detection.py  recognition.py  training.py
backend/app/middleware/: request_logger.py
backend/app/services/: agent_graph.py  agent_prompts.py  agent_tools.py  breed_name_service.py  cat_service.py  chat_service.py  cloud_adoption_service.py  dashboard_service.py  data_utils.py  detection_service.py  individual_recognition_service.py  knowledge_service.py  recognition_history_service.py  training_service.py  user_service.py  vision_service.py  yolo_recognition_service.py
backend/app/storage/: minio_client.py  redis_client.py
backend/app/utils/: image_utils.py
backend/logs/: .gitkeep
backend/models/: README.md
backend/runs/detect/runs/train/task_1/: args.yaml
backend/runs/train_cat_breeds/cat_breeds_v1/: args.yaml  results.csv  训练评估报告.md
backend/runs/train_cat_breeds/cat_breeds_v2/: README.md
backend/runs/train_cat_breeds/cat_breeds_v2/reports/: args.yaml  results.csv  training_report.json
backend/runs/train_emotion/emotion_v1/: README.md
backend/runs/train_emotion/emotion_v1/reports/: args.yaml  results.csv  training_report.json
backend/runs/train_health/health_v2/: README.md
backend/runs/train_health/health_v2/reports/: args.yaml  results.csv  training_report.json
backend/runs/train_individual/indiv_1/: README.md  history.json
backend/scripts/: crop_cat_heads.py  eval_cat_breeds.py  import_cat_dataset.py  train_cat_breeds.py  train_emotion.py  train_health.py  train_individual.py
backend/tests/: conftest.py  test_api_auth.py  test_api_chat.py  test_api_dashboard.py  test_api_detection.py  test_api_health.py  test_api_training_ownership.py  test_data_utils.py  test_models.py  test_schemas.py  test_security.py  test_services.py
frontend/: Dockerfile  (+10 more)
(+2329 files in other folders)
