[project]
name = "backend"
version = "0.1.0"
description = "RSOD Agent Platform - 基于 YOLOv11 的目标检测智能体平台后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-jose>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "minio>=7.2.0",
    "redis>=5.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
