[project]
name = "backend"
version = "0.1.0"
description = "VisAgent - 基于 YOLOv11 的目标检测智能体平台后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.18.0",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.30",
    "minio>=7.2.0",
    "redis>=8.0.0",
    # Agent 框架
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    # LLM 服务
    "openai>=2.44.0",
    # 目标检测
    "ultralytics>=8.4.0",
    # PyTorch (macOS Intel 最高支持 2.2.2)
    "torch==2.2.2",
    "torchvision==0.17.2",
    # 图像处理
    "opencv-python-headless>=5.0.0",
    "Pillow>=12.0.0",
    # 向量存储
    "pgvector>=0.4.0",
    # 环境变量
    "python-dotenv>=1.2.0",
    "langchain-openai>=1.3.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100

[tool.uv]
# macOS x86_64 需要使用 PyTorch CPU 版本
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
